2006-10-05  Bruno coudoin  <bruno.coudoin@free.fr>

	- On a great suggestion of Joshua N Pritikin, now in shapegames like
	  puzzles and geography, the hot point is set in green. This let the kid
	  know in advance where she will drop her piece.

	* src/boards/shapegame.c: (item_event), (add_shape_to_canvas):

2006-10-05  Bruno coudoin  <bruno.coudoin@free.fr>

	- added a new tool from Miguel DE IZARRA /miguel2i on free point fr/
	  This tool allow us to create puzzle or geography type activity
	  with ease.
	  It's a gimp python-fu script so you need gimp and python foo
	  on your system.
	* tools/gcompris_shapegame.py:

	* INSTALL: minor update
	* README: minor update

2006-10-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Imported these files from the gnome-python module in the gnome CVS
	  Now it is no more needed to have gnome-python installed on your system
	  to have the python plugin support.
	* src/boards/canvas.c:
	* src/boards/canvasmodule.c:

	- Improved makefiles to compile python plugins on windows

	* Makefile.mingw:
	* src/boards/Makefile.am:
	* src/boards/Makefile.mingw:

	- fixed python animation
	- fixed all python code to no more import gnome

	* src/boards/py-mod-anim.c: (AnimCanvas_getattr):
	* src/boards/py-mod-gcompris.c: (pair_in_dict),
	(pyGcomprisConfCallback), (py_gc_board_config_combo_box),
	(pair_object_in_dict), (py_gc_board_config_radio_buttons),
	(py_gc_board_config_spin_int),
	(py_gc_board_config_combo_locales_asset), (py_gc_im_reset),
	(python_gcompris_module_init):
	* src/boards/python.c: (pythonboard_init):
	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/group_list.py:
	* src/boards/python/admin/group_user_list.py:
	* src/boards/python/admin/module.py:
	* src/boards/python/admin/module_boards.py:
	* src/boards/python/admin/module_groups.py:
	* src/boards/python/admin/module_profiles.py:
	* src/boards/python/admin/module_users.py: