@@ -1,5 +1,12 @@
 2006-10-05  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	- fixed to work with shape game that provides a pixmap instead of the red dot.
+
+	* src/boards/shapegame.c: (find_closest_shape), (item_event),
+	(add_shape_to_canvas):
+
+2006-10-05  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	- On a great suggestion of Joshua N Pritikin, now in shapegames like
 	  puzzles and geography, the hot point is set in green. This let the kid
 	  know in advance where she will drop her piece.
